[package]
name = "libipt"
version = "0.3.0-beta1"
authors = ["sum_catnip <catnip@catnip.fyi>", "Marcondiro"]
edition = "2021"
license = "MIT"
description = "The Intel Processor Trace (Intel PT) Decoder Library is Intel's reference implementation for decoding Intel PT."
repository = "https://github.com/sum-catnip/libipt-rs"

[features]
libipt_master = ["libipt-sys/libipt_master"]

[dependencies]
libipt-sys = "0.2.1-beta.2"
bitflags = "2.4.1"
num_enum = "0.7.1"
