[package]
name = "libipt"
version = "0.3.0-beta.1"
authors = ["sum_catnip <catnip@catnip.fyi>", "Marcondiro <cavenatimarco+libiptrs@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The Intel Processor Trace (Intel PT) Decoder Library is Intel's reference implementation for decoding Intel PT."
categories = ["development-tools::debugging", "development-tools::profiling"]
repository = "https://github.com/sum-catnip/libipt-rs"
keywords = ["IntelPT", "ProcessorTrace", "libipt"]
rust-version = "1.82.0"

[features]
libipt_master = ["libipt-sys/libipt_master"]

[dependencies]
libipt-sys = "0.2.1-beta.3"
bitflags = "2.4.1"
num_enum = "0.7.1"
