[package]
name = "libipt"
version = "0.4.0"
authors = [
  "sum_catnip <catnip@catnip.fyi>",
  "Marcondiro <cavenatimarco+libiptrs@gmail.com>",
]
edition = "2024"
license = "MIT"
description = "The Intel Processor Trace (Intel PT) Decoder Library is Intel's reference implementation for decoding Intel PT."
categories = ["development-tools::debugging", "development-tools::profiling"]
repository = "https://github.com/sum-catnip/libipt-rs"
keywords = ["IntelPT", "ProcessorTrace", "libipt"]
rust-version = "1.85.0"

[features]
libipt_master = ["libipt-sys/libipt_master"]

[dependencies]
libipt-sys = { version = "0.2.1", git = "https://github.com/sum-catnip/libipt-sys.git" }
bitflags = "2.4.1"
derive_more = { version = "2.0.1", features = ["deref"] }
num_enum = "0.7.1"
